; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_remote_device.c_scic_sds_remote_device_resetting_state_enter.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_remote_device.c_scic_sds_remote_device_resetting_state_enter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@scic_sds_remote_device_state_handler_table = common dso_local global i32 0, align 4
@SCI_BASE_REMOTE_DEVICE_STATE_RESETTING = common dso_local global i32 0, align 4
@SCI_SOFTWARE_SUSPENSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @scic_sds_remote_device_resetting_state_enter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scic_sds_remote_device_resetting_state_enter(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %3, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = load i32, i32* @scic_sds_remote_device_state_handler_table, align 4
  %8 = load i32, i32* @SCI_BASE_REMOTE_DEVICE_STATE_RESETTING, align 4
  %9 = call i32 @SET_STATE_HANDLER(%struct.TYPE_3__* %6, i32 %7, i32 %8)
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @SCI_SOFTWARE_SUSPENSION, align 4
  %14 = call i32 @scic_sds_remote_node_context_suspend(i32 %12, i32 %13, i32* null, i32* null)
  ret void
}

declare dso_local i32 @SET_STATE_HANDLER(%struct.TYPE_3__*, i32, i32) #1

declare dso_local i32 @scic_sds_remote_node_context_suspend(i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
